--- a/v3/lights.yaml
+++ b/v3/lights.yaml
@@ -8,18 +8,18 @@
 # --------------------------------------------------
   - platform: mqtt ### light 01 in living room
     name: "dev01"
-    state_topic: "dev01/simple_light/status"
-    command_topic: "dev01/simple_light/switch"
+    state_topic: "dev01/sonoff_basic/status"
+    command_topic: "dev01/sonoff_basic/switch"
     qos: 0
     payload_on: "ON"
     payload_off: "OFF"
     optimistic: false
 # --------------------------------------------------
 # --------------------------------------------------
-  - platform: mqtt ### light 01 in dining room
+  - platform: mqtt ### light small ball
     name: "dev02"
-    state_topic: "dev02/simple_light/status"
-    command_topic: "dev02/simple_light/switch"
+    state_topic: "dev02/sonoff_basic/status"
+    command_topic: "dev02/sonoff_basic/switch"
     qos: 0
     payload_on: "ON"
     payload_off: "OFF"
@@ -28,28 +28,28 @@
 # --------------------------------------------------
   - platform: mqtt ### light 01 in carport
     name: "dev03"
-    state_topic: "dev03/simple_light/status"
-    command_topic: "dev03/simple_light/switch"
+    state_topic: "dev03/sonoff_basic/status"
+    command_topic: "dev03/sonoff_basic/switch"
     qos: 0
     payload_on: "ON"
     payload_off: "OFF"
     optimistic: false
 # --------------------------------------------------
 # --------------------------------------------------
-  - platform: mqtt ### light 02 in carport
+  - platform: mqtt ### light big ball
     name: "dev04"
-    state_topic: "dev04/simple_light/status"
-    command_topic: "dev04/simple_light/switch"
+    state_topic: "dev04/sonoff_basic/status"
+    command_topic: "dev04/sonoff_basic/switch"
     qos: 0
     payload_on: "ON"
     payload_off: "OFF"
     optimistic: false
 # --------------------------------------------------
 # --------------------------------------------------
-  - platform: mqtt ### light 03 in carport
+  - platform: mqtt ### light 05 in carport
     name: "dev05"
-    state_topic: "dev05/simple_light/status"
-    command_topic: "dev05/simple_light/switch"
+    state_topic: "dev05/sonoff_basic/status"
+    command_topic: "dev05/sonoff_basic/switch"
     qos: 0
     payload_on: "ON"
     payload_off: "OFF"
