--- a/v4/configuration.yaml
+++ b/v4/configuration.yaml
@@ -43,6 +43,15 @@ discovery:
 # Allows you to issue voice commands from the frontend in enabled browsers
 conversation:
 
+# camera test setup
+camera:
+  - platform: generic
+    name: Carport
+    still_image_url: http://192.168.178.32/web/admin.html
+    username: admin
+    password: admin
+    content_type: 'image/svg+xml'
+
 # Enables support for tracking state changes over time
 history:
 
