first running version with relay 8

--- a/v5/groups.yaml
+++ b/v5/groups.yaml
@@ -12,6 +12,7 @@
       - group.bathroom_1
       - group.carport
       - group.attic
+      - group.garden
       - group.rooms
 # -----------------------------------------------
   living_room:
