--- a/v5/customize.yaml
+++ b/v5/customize.yaml
@@ -41,31 +41,31 @@
       icon: "mdi:lamp"
 # -----------------------------------------------
     light.dev50_r1:
-      friendly_name: "Garden 1"
-      icon: "mdi:lamp"
+      friendly_name: "Pool Filterpumpe"
+      icon: "mdi:pool"
 # -----------------------------------------------
     light.dev50_r2:
-      friendly_name: "Garden 2"
-      icon: "mdi:lamp"
+      friendly_name: "Teich Wasserpumpe"
+      icon: "mdi:fish"
 # -----------------------------------------------
     light.dev50_r3:
-      friendly_name: "Garden 3"
-      icon: "mdi:lamp"
+      friendly_name: "Teich Luftpumpe"
+      icon: "mdi:fish"
 # -----------------------------------------------
     light.dev50_r4:
       friendly_name: "Garden 4"
       icon: "mdi:lamp"
 # -----------------------------------------------
     light.dev50_r5:
-      friendly_name: "Garden 5"
+      friendly_name: "Wandbeleuchtung"
       icon: "mdi:lamp"
 # -----------------------------------------------
     light.dev50_r6:
-      friendly_name: "Garden 6"
+      friendly_name: "Gartenstehlampe"
       icon: "mdi:lamp"
 # -----------------------------------------------
     light.dev50_r7:
-      friendly_name: "Garden 7"
+      friendly_name: "Terrasse Bodenlampe"
       icon: "mdi:lamp"
 # -----------------------------------------------
     light.dev50_r8:
@@ -98,6 +98,19 @@
       icon: "mdi:thermometer"
     sensor.dev27_humidity_dht:
       friendly_name: "Luftfeuchtigkeit"
+      icon: "mdi:signal-variant"
+# -----------------------------------------------
+    sensor.dev50_temperature_dht:
+      friendly_name: "Temp Außen"
+      icon: "mdi:thermometer"
+    sensor.dev50_humidity_dht:
+      friendly_name: "Feuchte Außen"
+      icon: "mdi:signal-variant"
+    sensor.dev50_temperature_dht1:
+      friendly_name: "Temp Innen"
+      icon: "mdi:thermometer"
+    sensor.dev50_humidity_dht1:
+      friendly_name: "Feuchte Innen"
       icon: "mdi:signal-variant"
 # -----------------------------------------------
     sensor.dev30_temperature_bme:
@@ -153,6 +166,8 @@
       friendly_name: "Raumklima"
     group.daily_forecast_short:
       friendly_name: "Wettervorhersage"
+    group.garden:
+      friendly_name: "Garten"
     #daily_forecast:
     #  friendly_name: "Wettervorhersage"
 # -----------------------------------------------
