--- a/v5/sensors.yaml
+++ b/v5/sensors.yaml
@@ -174,10 +174,11 @@
   - platform: systemmonitor
     resources:
       - type: disk_use_percent
-        arg: /home
+        arg: /
       - type: memory_free
       - type: processor_use
-# -----------------------------------------------------------
+      - type: last_boot
+      - type: since_last_boot
 # -----------------------------------------------------------
 # ------------------- WUNDERGROUND --------------------------
   - platform: wunderground
