bug fix for system monitor

--- a/v5/groups.yaml
+++ b/v5/groups.yaml
@@ -197,9 +197,9 @@
     name: System Monitor
     view: no
     entities:
-      - sensors.disk_use_percent
-      - sensors.memory_free
-      - sensors.processor_use
-      - sensors.last_boot
-      - sensors.since_last_boot
+      - sensor.disk_use_percent
+      - sensor.memory_free
+      - sensor.processor_use
+      - sensor.last_boot
+      - sensor.since_last_boot
 # -----------------------------------------------         
