--- a/v5/customize.yaml
+++ b/v5/customize.yaml
@@ -123,6 +123,19 @@
       friendly_name: "Licht im Holzschuppen"
       icon: "mdi:lamp"
 # -----------------------------------------------
+    sensor.dev70_temperature_dht:
+      friendly_name: "Temperatur"
+      icon: "mdi:thermometer"
+    sensor.dev70_humidity_dht:
+      friendly_name: "Luftfeuchtigkeit"
+      icon: "mdi:signal-variant"
+    sensor.dev70_brightness_temt6000:
+      friendly_name: "Helligkeit"
+      icon: "mdi:weather-sunny"
+    binary_sensor.dev70_motion:
+      friendly_name: "Bewegungsmelder Flur innen"
+      icon: "mdi:information-outline"
+# -----------------------------------------------
     sensor.dark_sky_apparent_temperature:
       friendly_name: "Aktuelle Außentemperatur"
     sensor.dark_sky_cloud_coverage:
