--- a/v5/groups.yaml
+++ b/v5/groups.yaml
@@ -51,8 +51,10 @@
     control: hidden
  #   view: no
     entities:
-      - sensor.dev27_temperature_dht
-      - sensor.dev27_humidity_dht
+      - sensor.dev70_temperature_dht
+      - sensor.dev70_humidity_dht
+      - sensor.dev70_brightness_temt6000
+      - binary_sensor.dev70_motion
       - light.dev02
       - light.dev04
 # -----------------------------------------------
