--- a/v5/customize.yaml
+++ b/v5/customize.yaml
@@ -136,6 +136,19 @@
       friendly_name: "Bewegungsmelder Flur innen"
       icon: "mdi:information-outline"
 # -----------------------------------------------
+    sensor.dev71_temperature_dht:
+      friendly_name: "Temperatur"
+      icon: "mdi:thermometer"
+    sensor.dev71_humidity_dht:
+      friendly_name: "Luftfeuchtigkeit"
+      icon: "mdi:signal-variant"
+    sensor.dev71_brightness_temt6000:
+      friendly_name: "Helligkeit"
+      icon: "mdi:weather-sunny"
+    binary_sensor.dev71_motion:
+      friendly_name: "Bewegungsmelder Carport innen"
+      icon: "mdi:information-outline"
+# -----------------------------------------------
     sensor.dark_sky_apparent_temperature:
       friendly_name: "Aktuelle Außentemperatur"
     sensor.dark_sky_cloud_coverage:
