--- a/v5/sensors.yaml
+++ b/v5/sensors.yaml
@@ -167,6 +167,25 @@
     name: "dev70_brightness_temt6000"
     unit_of_measurement: "raw"
 # -----------------------------------------------------------
+  - platform: mqtt
+    state_topic: "dev71/#"
+    name: "dev71"
+
+  - platform: mqtt
+    state_topic: "std/dev71/s/temp_hum/temp"
+    name: "dev71_temperature_dht"
+    unit_of_measurement: "ºC"
+
+  - platform: mqtt
+    state_topic: "std/dev71/s/temp_hum/hum"
+    name: "dev71_humidity_dht"
+    unit_of_measurement: "%"
+
+  - platform: mqtt
+    state_topic: "std/dev71/s/temt6000/raw"
+    name: "dev71_brightness_temt6000"
+    unit_of_measurement: "raw"
+# -----------------------------------------------------------
   - platform: darksky
     api_key: !secret darksky_key
     monitored_conditions:
