integrated octoprint to configuration
3D printer display

--- a/v5/b_sensors.yaml
+++ b/v5/b_sensors.yaml
@@ -40,3 +40,10 @@
     state_topic: "std/dev72/s/pir/status"
     name: "dev72_motion"
     device_class: motion
+# -------------- octoprint sensor ---------------
+  - platform: octoprint
+    name: OctoPrint
+    monitored_conditions:
+    - Printing
+    - Printing Error
+# -------------- octoprint sensor ---------------
