--- a/v5/sensors.yaml
+++ b/v5/sensors.yaml
@@ -236,6 +236,12 @@
       - type: last_boot
       - type: since_last_boot
 # -----------------------------------------------------------
+  - platform: octoprint
+    name: OctoPrint
+    monitored_conditions:
+    - Current State
+    - Temperatures
+    - Job Percentage
 # ------------------- WUNDERGROUND --------------------------
   - platform: wunderground
     api_key: !secret wu_key
