integrated 3D-Printer switch
based on sonoff

--- a/v5/customize.yaml
+++ b/v5/customize.yaml
@@ -33,7 +33,7 @@
       icon: "mdi:lamp"
 # -----------------------------------------------
     light.dev05:
-      friendly_name: "AP Rest"
+      friendly_name: "3D-Printer"
       icon: "mdi:lamp"
 # -----------------------------------------------
     light.dev50_r1:
